# puzi.io

./: ERROR_CODES.md  README.md
.claude/: settings.local.json
program/: Anchor.toml  Cargo.toml  README.md  build_idl.sh  build_optimized.sh  build_ultra_optimized.sh  deploy.sh  deploy_optimized.sh
program/programs/puzi/: Cargo.toml
program/programs/puzi/src/: lib.rs
program/tests/: puzi.test.ts
puzi_contracts/: Anchor.toml  Cargo.toml  README.md  pnpm-lock.yaml
puzi_contracts/programs/puzi_contracts/: Cargo.toml
puzi_contracts/programs/puzi_contracts/src/: lib.rs
puzi_contracts/tests/: puzi_contracts.ts
website/: package.json  pnpm-lock.yaml
website/.claude/: settings.local.json
website/anchor-idl/: idl.json  idl.ts
website/app/: layout.tsx  page.tsx
website/app/[address]/: page.tsx
website/app/markets/: page.tsx
website/components/counter/: CounterDisplay.tsx  DecrementButton.tsx  IncrementButton.tsx  WalletButton.tsx
website/components/layout/: Footer.tsx  Header.tsx  LanguageSwitcher.tsx  RPCSettings-Simple.tsx  RPCSettings.tsx  RPCSettingsModal.tsx
website/components/marketplace/: ActiveListings.tsx  CreateTokenForm.tsx  ListingCard.tsx  ListingForm.tsx  MarketplaceCard.tsx  PurchaseModal.tsx  TokenList.tsx  UserListings.tsx
website/config/: env.ts  known-tokens.ts  tradable-tokens.ts
website/hooks/: useAnchorProvider.tsx
website/lib/i18n/: context.tsx  (+1 more)
website/providers/: SolanaProvider.tsx
website/scripts/: update-program.js
website/utils/: rent.ts  rpc-provider.ts  sol-wrapper.ts  transaction-helper.tsx  usdc-address.ts
(+19 files in other folders)
